A few word corrections and twitter feed

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -111,11 +111,11 @@
 <hr class ='bottom'>
 
 <div class="row">
-	<div class="large-12 columns">
+	<div class="large-8 columns">
 		<p>Do you have an opportunity you’d like to see featured here?  Please <a href="/contact_us">contact us</a> to find out how.</p>
-		<% oc=0 %>
+    <% oc=0 %>
 		<% @jobs.order([:release]).reverse.each do |message| %>
-			<% if oc<10 %>
+			<% if oc<2 %>
 				<% if message.release.to_date < Time.now %>
 					<% if message.expiry.to_date > Time.now %>
 						<% oc = oc+1 %>
@@ -129,14 +129,45 @@
 								<h5><a class='OT' href=<%= url %>> <p><%= message.name %></p> </a></h5>
 								<%= social_share_button_tag(message.name, :url=>full_url) %>
 								<p class="content"><%= message.short %></p>
-								<p class="time">Opportunity added on: <%= message.release.to_date.strftime("%d/%m/%Y") %>. Live here until: <%= message.expiry.to_date.strftime("%d/%m/%Y") %></p>
+								<p class="time"> Live until: <%= message.expiry.to_date.strftime("%d/%m/%Y") %></p>
 							</div>
 						</div>
 						<hr>
 					<% end %>
 				<% end %>
 			<% end %>
-		<% end %>
+      <% end %>
+</div>
+<div class="large-4 columns" style="border-left: 1px solid #E3E5E8;">
+    <a class="twitter-timeline" data-height="700" data-theme="light" href="https://twitter.com/kcldo1thing">Tweets by kcldo1thing</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+<div class="large-12 columns">
+  <%k1=0 %>
+  <% @jobs.order([:release]).reverse.each do |message2| %>
+      <% if message2.release.to_date < Time.now %>
+        <% if message2.expiry.to_date > Time.now %>
+        <% k1=k1+1 %>
+        <% if k1>2 && k1<10%>
+        <div class="row">
+          <div class="large-6 columns">
+            <% url="opportunity/" + message2.url %>
+            <%=link_to image_tag(message2.photo.url, alt:  message2.tagline,title:message2.tagline, width:"100%"),url %>
+          </div>
+          <div class="large-6 columns">
+            <% full_url=request.base_url+"/"+url%>
+            <h5><a class='OT' href=<%= url %>> <p><%= message2.name %></p> </a></h5>
+            <%= social_share_button_tag(message2.name, :url=>full_url) %>
+            <p class="content"><%= message2.short %></p>
+            <p class="time"> Live until: <%= message2.expiry.to_date.strftime("%d/%m/%Y") %></p>
+          </div>
+        </div>
+        <hr>
+        <% end %>
+        <% end %>
+      <% end %>
+    <% end %>
+</div>
+
 
 		<% jobtot=0 %>
 		<%@jobs.each do |message| %>
