--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -111,6 +111,11 @@ p.pfooter{
   background-color: rgba(255, 255, 255, 0.7);
 }
 
+.overlay-container .overlay p{
+	color: grey;
+	font-size: 8px;
+}
+
 .image_width{
 	width:100%;
 	border: 2px solid blue;
