--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -124,7 +124,7 @@
 								<% url="opportunity/" + message.url %>
                 <div class="overlay-container">
                   <%=link_to image_tag(message.photo.url, alt:  message.tagline,title:message.tagline, width:"100%"),url %>
-                  <% if message.copyright %>
+                  <% if not message.copyright.blank? %>
                     <div class="overlay"><span><p>Copyright: <%= message.copyright %></p></span></div>
                   <% end %>
                 </div>
@@ -158,7 +158,7 @@
             <% url="opportunity/" + message2.url %>
             <div class="overlay-container">
               <%=link_to image_tag(message2.photo.url, alt:  message2.tagline,title:message2.tagline, width:"100%"),url %>
-              <% if message2.copyright %>
+              <% if not message2.copyright.blank? %>
                 <div class="overlay"><span><p>Copyright: <%= message2.copyright %></p></span></div>
               <% end %>
             </div>
