First set of comments

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -1,3 +1,7 @@
+///////////////////////////////////////////////////////////////////////////////
+// _settings.scss
+///////////////////////////////////////////////////////////////////////////////
+
 //  Foundation for Sites Settings
 //  -----------------------------
 //
@@ -564,4 +568,3 @@ $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 1rem;
 $topbar-input-width: 200px;
 $topbar-unstack-breakpoint: medium;
-
