--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1,3 +1,7 @@
+///////////////////////////////////////////////////////////////////////////////
+// foundation_and_overrides.scss
+///////////////////////////////////////////////////////////////////////////////
+
 //CSS that overides the foundation defaults
 @charset 'utf-8';
 
@@ -56,6 +60,7 @@
 //This is the custom css for the site
 //This overides the foundation css
 
+//Top bar
 .top-bar ul{
 	font-family: impact;
 	font-size: map-get(map-get($header-sizes, small), h1) * 1px;
@@ -70,6 +75,7 @@
 	color:#501491;
 }
 
+//Line Dividers
 hr{
 	border: 0;
     height: 1px;
@@ -93,10 +99,14 @@ h1.C{
 h1.G{
 	color:#501491;
 }
+
+//Footer
 p.pfooter{
 	size: 11px;
 	font: Georgia;
 }
+
+//Picture Overlays
 .overlay-container {
   position: relative; /* <-- Set as the reference for the positioned overlay */
 }
@@ -121,6 +131,7 @@ p.pfooter{
 	border: 2px solid blue;
 }
 
+//cookie-bar CSS
 #cookie-bar {background:#111111; height:auto; line-height:24px; color:#eeeeee; text-align:center; padding:3px 0;}
 #cookie-bar.fixed {position:fixed; top:0; left:0; width:100%;}
 #cookie-bar.fixed.bottom {bottom:0; top:auto;}
