--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -21,28 +21,44 @@
 
 <div class="row">
 	<div class="large-12 columns">
-		<p> How do I prepare myself for my future? Where do I start? Which activities do other people rate?
-			We recognise it can be hard to find the best opportunites for you. But if you #do1thing you will probably;
-		</p>
-		<ul>
-			<li>Learn something about yourself</li>
-			<li>Realise what you do, or really don't, want to do
-			</li>
-			<li>Meet some interesting people
-			</li>
-			<li> Have an enjoyable experience </li>
-		</ul>
-		<p> Who knows... you might just do another thing and another! </p>
-		<h4> #do1thing </h4>
-				<ul>
-			<li> Is designed specifically for the 4,700 research staff and postgraduate research students at King’s</li>
-			<li>Gives you up to date info on the best activities currently available at King’s
-			</li>
-			<li>Welcomes content – contact <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a>
-			</li>
-			<li>  Is a project delivered by King’s PhD students through the King’s Research Consultancy, funded by the Researcher Development Unit and Centre for Research Staff Development</li>
-		</ul>
-	</div>
+    <p>We created <a href="http://www.kcldo1thing.com">www.kcldo1thing.com</a> in summer 2016 to help you, as a researcher at King’s, find out more about what’s going on that might interest you.
+      We know, from talking with PhDs and research staff, that it’s hard to spot opportunities across King’s (and outside).
+      We also know that doing one thing, or indeed lots of things, can help you meet new people, be inspired to find out more about your next move, or just feel more involved in what’s going on here.</p>
+    <p>Check out all the opportunities we’ve put up. Some of them are jobs, others are events, and occasionally there’s even some funding.
+        We advertise some of the services King’s offers you too – just as a reminder that there’s lots going on outside your library, lab or office.</p>
+    <p>You might find that there’s not much specifically for your research area: apologies if that’s the case. Please send us something! Or, get in touch if you’d like help creating something for you and your colleagues.</p>
+  </div>
+  <div class="large-12 columns">
+    <h4>#do1thing</h4>
+    <ul>
+      <li>Is designed specifically for the 4,700 research staff and postgraduate research students at King’s </li>
+      <li>Gives you up to date info on the best activities currently available at King’s (and beyond) </li>
+      <li>Welcomes content – contact <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a></li>
+      <li>Is a project delivered by King’s PhD students through the King’s Research Consultancy, funded by the Researcher Development Unit and Centre for Research Staff Development</li>
+    </ul>
+
+  </div>
+  <div class="large-12 columns">
+    <h4>Meet the team</h4>
+    <p> Here are the people at do1thing HQ dedicated to bringing you the best opportunities we can: </p>
+    <br>
+  </div>
+  <div class="large-3 small-6 columns">
+    <%=image_tag("Donald_Lush.png", alt: "Donald Lush, Careers Consultant for PGRs", title: "Donald Lush, Careers Consultant for PGRs")%>
+    <p>Donald Lush, Careers Consultant for PGRs</p>
+  </div>
+  <div class="large-3 small-6 columns">
+    <%=image_tag("kate_murray.png", alt: "Kate Murray, Careers Consultant for Research Staff", title: "Kate Murray, Careers Consultant for Research Staff")%>
+    <p>Kate Murray, Careers Consultant for Research Staff</p>
+  </div>
+  <div class="large-3 small-6 columns">
+    <%=image_tag("Nudrat_Siddiqui.png", alt: "Nudrat Siddiqui, Research Staff Development Officer", title: "Nudrat Siddiqui, Research Staff Development Officer")%>
+    <p>Nudrat Siddiqui, Research Staff Development Officer</p>
+  </div>
+  <div class="large-3 small-6 columns">
+    <%=image_tag("dr_amy_birch.png", alt: "Dr Amy Birch, Research Staff Development Consultant", title: "Dr Amy Birch, Research Staff Development Consultant")%>
+    <p>Dr Amy Birch, Research Staff Development Consultant</p>
+  </div>
 </div>
 <br>
 <br>
@@ -51,15 +67,3 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
