--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -19,9 +19,38 @@
 <hr class='bottom'>
 
 <div class="row">
-	<div class="large-12 columns">
-		<p> Do you have an opportunity you’d like to share with the 4,700 researchers at King’s?  Please contact <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a> </p>
+  <div class="large-12 columns">
+    <p> We’d love to hear from you if you’ve an opportunity to send us!
+      <a href="http://www.kcldo1thing.com">www.kcldo1thing.com</a> reaches all 4700 King’s researchers through promotion via Careers & Employability, Centre for Research Staff Development and the Researcher Development Unit. <p>
+  </div>
+	<div class="large-8 columns">
+		<p>Who we’d like to hear from:</p>
+    <ul>
+      <li>Current KCL PhDs or research staff</li>
+      <li> KCL researcher societies </li>
+      <li> KCL professional societies </li>
+      <li> Organisations outside of KCL who are intersted in talking to our researchers</li>
+    </ul>
+    <p>What we’d like to promote for you:</p>
+    <ul>
+      <li>Events that are specifically for PhDs or research staff</li>
+      <li>Funding opportunities, particularly for example for travel, public engagement or other impact </li>
+      <li>Jobs, work experience, work shadowing and so on</li>
+    </ul>
+    <p>Here’s how to contact us:</p>
+    <p>Email <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or Tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a> </p>
+    <p>What we’ll need</p>
+    <ul>
+      <li>A copyright-free picture</li>
+      <li>A URL or email address for further contact</li>
+      <li>A headline </li>
+      <li>Some more text describing your opportunity.</li>
+    </ul>
+    <p>We look forward to helping you promote your opportunity to our fantastic researchers.</p>
 	</div>
+  <div class="large-4 columns">
+    <%=image_tag("cables.png", alt: "Computer cables signifying communication", title: "Computer cables signifying communication")%>
+  </div>
 </div>
 <br>
 <br>
@@ -31,19 +60,3 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
