--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -42,6 +42,8 @@
     </ul>
     <p>Here’s how to contact us:</p>
     <p>Email <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or Tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a> </p>
+    </div>
+    <div class="large-12 columns">
     <p>What we’ll need</p>
     <ul>
       <li>A copyright-free picture</li>
