--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -31,20 +31,20 @@
     <ul>
       <li>Current KCL PhDs or research staff</li>
       <li> KCL researcher societies </li>
-      <li> KCL professional societies </li>
-      <li> Organisations outside of KCL who are intersted in talking to our researchers</li>
+      <li> KCL professional services </li>
+      <li> Organisations outside of KCL who are interested in talking to our researchers.</li>
     </ul>
     <p>What we’d like to promote for you:</p>
     <ul>
       <li>Events that are specifically for PhDs or research staff</li>
       <li>Funding opportunities, particularly for example for travel, public engagement or other impact </li>
-      <li>Jobs, work experience, work shadowing and so on</li>
+      <li>Jobs, work experience, work shadowing and so on.</li>
     </ul>
     <p>Here’s how to contact us:</p>
     <p>Email <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or Tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a> </p>
     </div>
     <div class="large-12 columns">
-    <p>What we’ll need</p>
+    <p>What we’ll need:</p>
     <ul>
       <li>A copyright-free picture</li>
       <li>A URL or email address for further contact</li>
