--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 			<%=link_to image_tag("KCL_LOGO.png", alt: "King's College London Logo", title: "King's College London Logo"),"http://www.kcl.ac.uk/index.aspx"%>
 			<%=link_to image_tag("CAREERS.png", alt: "Careers Logo", title: "Careers Logo"),"http://www.kcl.ac.uk/campuslife/services/careers/index.aspx"%>
 			<%=link_to image_tag("GRADUATE_SCHOOL.png", alt: "Graduate School Logo", title: "Graduate School Logo")," http://www.kcl.ac.uk/study/graduate-school/researcher-development/index.aspx"%>
-			<%=link_to image_tag("CENTRE.png", alt: "Centre for Research Staff Development Logo", title:"Centre for Research Staff Development Logo"),"http://www.kcl.ac.uk/study/graduate-school/researcher-development/Research-Staff/information-for-research-staff.aspx"%>
+			<%=link_to image_tag("CENTRE.png", alt: "Centre for Research Staff Development Logo", title:"Centre for Research Staff Development Logo")," http://www.kcl.ac.uk/crsd"%>
 			<%=link_to image_tag("do1thing_logo.png", alt: "Do1Thing Logo", title: "Do1Thing Logo", width:"182"), "/index"%>
 	</div>
   </div>
