--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,8 +83,9 @@
 </header>
 
 <%= yield %>
-
+<br>
 <%= javascript_include_tag "application" %>
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
 <div class="footer">
   <br>
