--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,6 +85,7 @@
 
 <%= yield %>
 <br>
+<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
 <%= javascript_include_tag "application" %>
 
 <div class="footer">
