--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -110,7 +110,7 @@
 </div>
 
 <div class="row large-12 columns">
-<div class="grid" data-masonry='{ "itemSelector": ".grid-item"}'>
+<div class="grid">
 
   <% @jobs.order([:release]).reverse.each do |message2| %>
   <div class="grid-item">
