--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <%= javascript_include_tag "application" %>
 
 <header>
 	<div class="row">
@@ -81,12 +85,9 @@
   </div>
 </div>
 </header>
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-
 <%= yield %>
 <br>
-<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
-<%= javascript_include_tag "application" %>
+
 
 <div class="footer">
   <br>
