--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -110,7 +110,7 @@
 </div>
 
 <div class="row large-12 columns">
-<div class="grid">
+  <div class="grid js-masonry">
 
   <% @jobs.order([:release]).reverse.each do |message2| %>
   <div class="grid-item">
